stylesheet.css
@font-face {
    font-family: 'Apple Kid';
    src: url('Apple-Kid.eot');
    src: url('Apple-Kid.eot?#iefix') format('embedded-opentype'),
        url('Apple-Kid.woff2') format('woff2'),
        url('Apple-Kid.woff') format('woff'),
        url('Apple-Kid.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
  font-family: 'renogare';
  src: url('renogare.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}



h1, h2 {
  text-align: center;
  font-size: 60px;
}

a {
  cursor: url("Hand-Arrow.cur"), default;
}

p {
  text-align: center;
  font-size: 32px;
}

ul {
  list-style-type: none;
  margin: 0px;
  padding: 10px;
  overflow: hidden;
  position: fixed;
  top: 0;
  width: 95%;
  background-color: #2F4C39;
  justify-content: space-between;
}

li {
  float: none;
  border-right: 2px solid #bbb;
  padding: auto;
}

li a {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 0px;
  text-decoration: none;
}

li a:hover {
  background-color: #111;
}

.navbar {
  width: 80%;
  background-color: #102A43;
  opacity: 80%;
  margin: auto;
  padding: auto;
  display: inline-block;
  border-color: #2F4C39;
  display: inline-block;
  align-items: center;
  align-content: center;
  flex-wrap: wrap;
}

.paragraph {
  width: 75%;
  align-self: flex-end;
  align-content: center;
  background-color: #2F4C39;
  opacity: 30%;
  cursor: url('Hand-arrow.cur'), default;
}


.reno {
  font-family: renogare;
}

.apple {
  font-family: Apple Kid;
}


.black {
  color: black;
}

.white {
  color: white;
}

